# vertex-code-analysis

./: .gitignore  LICENSE  README.md  ai_test.py  prompt.yaml  pyproject.toml  requirements.in  requirements.txt
.streamlit/: config.toml
demo/: Demo.py  cli.py  requirements.txt  vertex_model.py
demo/poor_code_examples/: File open context.py
experiments/: ai_test.py
vertex_code_analysis/: Demo.py  cli.py  vertex_model.py
vertex_code_analysis/poor_code_examples/: Calculate circle area.py  For loop with Pandas.py  Hardcoded max function.py  Numpy arrays.py
