[project]
name = "vertex-code-analysis"

version = "0.1"

description = "A static code analysis tool based on Google PaLM."

readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE"}

dependencies = [
  "google-cloud-aiplatform~=1.27.1",
  "google-generativeai~=0.1.0",
  "PyYAML~=6.0",
  "toolz~=0.12"
]

[project.optional-dependencies]
full = [
  "streamlit-ace~=0.1.1",
  "streamlit~=1.24.1",
  "ratelimit~=2.2.1",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vertex_code_analysis"]

[project.urls]
"Demo" = "https://vertex-code-analysis.streamlit.app/"
"Source" = "https://github.com/romech/vertex-code-analysis"

[project.scripts]
vertex_analyse = "vertex_code_analysis.cli:main"